# CompMath

./: .gitignore  BigBrusselatorExample.cpp  Brussalator.cpp  CompMath.code-workspace  README.md  b  br  bruss  bruss.c  brussel.c  brusselator.gp  brusselator_data.txt  q  qt.cpp  winCodeRK4.cpp
practLesson/: dynamics.c  p.plot  prog2.c  prog3  prog3.c
task_1/: .gitattributes  CMakeLists.txt  CompMath.code-workspace  bruesselator.cpp  bruss.c  bruss.cpp  brusselator  brusselator.cpp  brusselatorr.cpp  output.txt  plot.gp  visualisation.py
task_1/WorkedRealesation/: Brusselator-GUI-App.py  Brusselator_reflektiv_Rand_fluktuationen.py
task_2/: main.cpp
third-party implementation/: Brusselator_reflektiv_Rand_fluktuationen.py
